--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parovozreact",
- 
+  "homepage": " https://platon61633.github.io/parovoz/news",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
